infrastructure/modules/eks/k8s/ingress/alb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      containers:
        - args:
            - --cluster-name=${CLUSTER_NAME}
            - --ingress-class=alb
          image: amazon/aws-load-balancer-controller:v2.6.0
          name: controller
          resources:
            requests:
              cpu: 0.25
              memory: 0.5Gi
      serviceAccountName: aws-load-balancer-controller
